# magic-carpet-community-patch

./: .editorconfig  .gitignore  CMakeLists.txt  Install Guide.txt  README.md  README_controllers  RunUnitTest.bat  RunUnitTestX64.bat  config.ini  remc2-installer.sln  remc2.sln  sonar-project.properties
.github/workflows/: linux.yml  linux64bit.yml  msbuild.yml
docs/: events.md
enhancedassets/: Graphics Install Guide.txt
flatpak/: remc2.flatpak.json
fluidsynth/Win32/lib/cmake/fluidsynth/: FluidSynthConfig.cmake  FluidSynthConfigVersion.cmake  FluidSynthTargets.cmake
fluidsynth/Win32/lib/pkgconfig/: fluidsynth.pc
fluidsynth/x64/lib/cmake/fluidsynth/: FluidSynthConfig.cmake  FluidSynthConfigVersion.cmake  FluidSynthTargets.cmake
fluidsynth/x64/lib/pkgconfig/: fluidsynth.pc
inih/: ini.h
libADLMIDI-master/: CMakeLists.txt
libpng2/libpng-master/projects/vstudio2017/: vstudio.sln
libpng2/libpng-master/projects/vstudio2017/libpng/: libpng.vcxproj
libpng2/libpng-master/projects/vstudio2017/pnglibconf/: pnglibconf.vcxproj
remc2/: CMakeLists.txt  remc2.vcxproj  remc2.vcxproj.filters  sub_main.cpp  sub_main.h  trace.cpp  vcpkg.json
remc2-editor/: CMakeLists.txt  ReadConfig.cpp  ReadConfig.h  editor-config.ini  editor.cpp  editor.h  editor_main.cpp  kiss_sdl.h  kiss_widgets.cpp  remc2-editor.vcxproj  remc2-editor.vcxproj.filters  vcpkg.json
remc2-installer/: CustomActions.cs  CustomDialog.cs  EnhancedTexturesDialog.Designer.cs  EnhancedTexturesDialog.cs  Extract.bat  GameDataDialog.Designer.cs  GameDataDialog.cs  InstallTypeDialog.Designer.cs  InstallTypeDialog.cs  Magic Carpet 2 HD.msi  Program.cs  ReleaseNotesDialog.Designer.cs  ReleaseNotesDialog.cs  Utils.cs  release_notes.rtf  remc2-installer.csproj
remc2-installer-unit-tests/: UtilsTests.cs  remc2-installer-unit-tests.csproj
remc2-installer/Extract/: dosboxExtract-GOG-CD.conf
remc2-installer/Resources/: MagicCarpet2HD.licence.rtf
remc2-installer/wix/: .gitignore  remc2-installer.g.wxs
remc2-regression-test/: CMakeLists.txt  Regression-tests.cpp  regression-tests.cpp  remc2-regression-test.vcxproj  renderer-config.ini  test_renderer.ps1  test_renderer.sh  tests.cpp  vcpkg.json
remc2-unit-test/: CMakeLists.txt  GameRenderHD.cpp  remc2-unit-test.vcxproj  remc2-unit-test.vcxproj.filters  vcpkg.json
remc2-unit-test/comparison/engine/: OriginalTerrain.h
remc2-unit-test/engine/: SetRenderViewPortSize_40C50UT.cpp
remc2-unit-test/utilities/: MathUT.cpp
remc2/engine/: Animation.cpp  Animation.h  Basic.cpp  Basic.h  CommandLineParser.cpp  CommandLineParser.h  Events.cpp  Events.h  GameBitmap.cpp  GameBitmap.h  GameBitmapIndexes.h  GameOverlay.cpp  GameOverlay.h  GameOverlayIndexes.h  GameRender.cpp  GameRender.h  GameRenderHD.cpp  GameRenderHD.h  GameRenderInterface.cpp  GameRenderInterface.h  GameRenderLookingGlass.cpp  GameRenderLookingGlass.h  GameRenderNG.cpp  GameRenderNG.h  GameRenderOriginal.cpp  GameRenderOriginal.h  GameUI.cpp  GameUI.h  GameUiConstants.h  Graphics.cpp  Graphics.h  HelpPopupIndexes.h  LangTextIndexes.h  Level.cpp  Level.h  Map.h  MenusAndIntros.cpp  MenusAndIntros.h  Network.cpp  Player.cpp  (+35 more)
remc2/portability/: PortSoundInterface.h  bitmap_pos_struct.h  mctypes.h  port_filesystem.cpp  port_filesystem.h  port_net.h  port_openal.cpp  port_openal.h  port_outputs.h  port_sdl_joystick.cpp  port_sdl_joystick.h  port_sdl_sound.cpp  port_sdl_sound.h  port_sdl_vga_mouse.cpp  port_sdl_vga_mouse.h  port_sound_lut.h
remc2/utilities/: BitmapIO.cpp  BitmapIO.h  DataFileIO.cpp  DataFileIO.h  Maths.cpp  Maths.h  RendererTests.cpp  RendererTests.h  StateMonitor.cpp  StateMonitor.h  Wave.h
remc2/x64/Debug/: remc2.exe.recipe  remc2.vcxproj.FileListAbsolute.txt
sdl2_mixer/VisualC/: SDL_mixer.sln  SDL_mixer.vcxproj
sdl2_mixer/VisualC/native_midi/: native_midi.vcxproj
sdl2_mixer/VisualC/playmus/: playmus.vcxproj
sdl2_mixer/VisualC/playwave/: playwave.vcxproj
sdl2_mixer/VisualC/timidity/: timidity.vcxproj
tools/: check_install.sh
tools/compressTMAPS/compressTMAPS/: compressTMAPS.cpp
tools/decompressTMAPS/DecompressTMAPS/: BitmapIO.cpp  BitmapIO.h  DecompressTMAPS.cpp  DecompressTMAPS.h  DecompressTMAPS.vcxproj  DecompressTMAPS.vcxproj.filters  ReadMe.txt
tools/decompressTMAPS/DecompressTMAPS/Debug/: DecompressTMAPS.vcxproj.FileListAbsolute.txt
